# pyside-native-glass

./: .gitignore  LICENSE  README.md  __init__.py  fix_readme.py  generar_todo.py  pyproject.toml  setup.py
examples/: demo_mica.py  demo_sidebar_app.py  demo_styles.py
src/native_glass/: __init__.py
src/native_glass/mac/: mac_utils.py  widget_effect.py  window_effect.py
src/native_glass/windows/: c_structures.py  win32_utils.py  window_effect.py
